--- a/src/cross_chain_asset_swap_frontend/src/components/Header.module.css
+++ b/src/cross_chain_asset_swap_frontend/src/components/Header.module.css
@@ -1,4 +1,4 @@
-.headerBar {
+/* .headerBar {
   width: 100%;
   background: #1d1334;
   min-height: 70px;
@@ -144,4 +144,4 @@
     gap: 8px;
     min-width: 180px;
   }
-}
+} */
