--- a/src/cross_chain_asset_swap_frontend/src/styles/PageContainer.module.css
+++ b/src/cross_chain_asset_swap_frontend/src/styles/PageContainer.module.css
@@ -1,4 +1,4 @@
-.pageContainer {
+/* .pageContainer {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 16px 32px 16px;
@@ -6,4 +6,4 @@
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
-}
+} */
